# tealscript

./: CMakeLists.txt  README.md  run_alu74181_model.sh  run_alu74181_renderer.sh
examples/: alu74181_model.teal  alu74181_view.teal  draft.teal  external_client.teal  external_server.teal  external_value.teal  lights.teal  perf_limit.teal  pidreg.teal  tap_lights.teal
examples/fractal/: CMakeLists.txt  fractal.pro
examples/interpreter/: CMakeLists.txt  main.cpp  tealscript.pro
examples/pendulum/: CMakeLists.txt  main.cpp  pendulum.pro  pendulum.save
examples/ray/: CMakeLists.txt  ray.pro
examples/zmq/: CMakeLists.txt  zeromq.pro
src/: tealscript_cells.hpp  tealscript_codegen.hpp  tealscript_expr.hpp  tealscript_interfaces.hpp  tealscript_net.hpp  tealscript_parser.hpp  tealscript_runtime.hpp  tealscript_statement.hpp  tealscript_util.hpp  tealscript_value.hpp
src/ext/: eigen_ext.hpp  time_ext.hpp
src/inc/: binned_allocator.hpp  mt_synchro.hpp  serialization.hpp
src/inc/net/: udp_client_muxed.hpp  udp_server_muxed.hpp
