cmake_minimum_required(VERSION 3.10.2)

message(STATUS "CMake version: ${CMAKE_VERSION}")

if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release)
endif()

if (CMAKE_BUILD_TYPE STREQUAL "Release")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
endif()

set(CMAKE_CXX_COMPILER g++)
set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_C_STANDARD 99)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native -ftree-vectorize -mavx2 -ftree-vectorizer-verbose=5 -fstrict-aliasing -Wall -Wextra -rdynamic -fPIC -Wno-maybe-uninitialized -Wno-unused-function -Wno-unused-parameter -Wl,-rpath,.")

add_subdirectory(examples/interpreter)
add_subdirectory(examples/fractal)
find_package(raylib QUIET)
if(raylib_FOUND)
    add_subdirectory(examples/pendulum)
    add_subdirectory(examples/ray)
else()
    message(STATUS "raylib not found")
endif()
find_library(ZeroMQ_LIBRARY zmq)
if(NOT ZeroMQ_LIBRARY)
    message(STATUS "zeromq not found")
else()
    add_subdirectory(examples/zmq)
endif()
